# STM32Keyboard

./: .Elec3300Keyboard Debug.cfg.swp  .cproject  .gitignore  .mxproject  .project  .vscode-ctags  CMakeLists.txt  Elec3300Keyboard Debug.cfg  Elec3300Keyboard Debug.launch  Elec3300Keyboard.ioc  Makefile  README.md  STM32F103VDTX_FLASH.ld  STM32F103VETX_FLASH.ld  project.cmake  stm32f1.cfg  testing.cfg  testing.launch
Core/Inc/: FreeRTOSConfig.h  HID_code.h  KeyID.h  RGB.h  Utilities.h  battery.h  display_icon.h  display_manager.h  fingerprint.h  flash.h  hid_queue.h  host_OS.h  keyInterface.h  key_handler.h  keyboard_system.h  linked_list.h  main.h  matrix_button.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  volume.h
Core/Inc/oled/: finger_page.h  layout_page.h  led_mode_page.h  led_page.h  macro_page.h  oled_manager.h  page_template.h  ssd1306.h  ssd1306_conf.h  status_page.h
Core/Src/: RGB.c  battery.c  display_manager.c  fingerprint.c  flash.c  hid_queue.c  host_OS.c  keyInterface.c  key_handler.c  keyboard_system.c  linked_list.c  main.c  matrix_button.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c  volume.c
Core/Src/oled/: finger_page.c  layout_page.c  led_mode_page.c  led_page.c  marco_page.c  oled_manager.c  ssd1306.c  ssd1306_fonts.c  ssd1306_tests.c  status_page.c
Middlewares/ST/STM32_USB_Device_Library/Class/HID/Inc/: usbd_hid.h
Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/: usbd_hid.c
USB_DEVICE/App/: usb_device.c  usbd_desc.c
images/: view.HEIC
